# timelock

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: document.yml  release.yml  test.yml
client/: Cargo.toml
client/src/: cli.rs  crypto.rs  main.rs  network.rs  utils.rs
client/src/app/: mod.rs
client/src/commands/: download.rs  list_messages.rs  list_users.rs  login.rs  logout.rs  mod.rs  reset.rs  send.rs  signup.rs  unlock.rs
docs/: README.md  download.md  download.puml  identification.md  identify.puml  key_structure.puml  list_messages.puml  password_reset.md  reset_pass.puml  reset_password.puml  retrieve_keys.puml  send.md  send.puml  unlock.md  unlock.puml
server/: Cargo.toml
server/src/: main.rs  network.rs  utils.rs
server/src/handlers/: download_message.rs  get_credentials.rs  get_public_key.rs  get_salt.rs  identify.rs  list_messages.rs  list_users.rs  mod.rs  reset_password.rs  send_message.rs  unlock_message.rs
shared/: Cargo.toml
shared/src/: crypto.rs  frames.rs  keygen.rs  lib.rs  messages.rs  models.rs  utils.rs
