[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3.3"
chrono = "0.4.41"
directories = "6.0.0"
native-tls = { version = "0.2.14", features = ["vendored"] }
shared = { path = "../shared" }
subtle = "2.6.1"
uuid = { version = "1.17.0", features = ["v4"] }

[[bin]]
name = "timelock-server"
path = "src/main.rs"